--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.quizme">
+    package="com.android.quiz">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -18,18 +18,18 @@
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-3940256099942544~3347511713"/>
 
-        <activity android:name=".SpinnerActivity"></activity>
-        <activity android:name=".ResultActivity"></activity>
-        <activity android:name=".QuizActivity"></activity>
-        <activity android:name=".SignupActivity"></activity>
-        <activity android:name=".LoginActivity">
+        <activity android:name="com.android.quiz.SpinnerActivity"></activity>
+        <activity android:name="com.android.quiz.ResultActivity"></activity>
+        <activity android:name="com.android.quiz.QuizActivity"></activity>
+        <activity android:name="com.android.quiz.SignupActivity"></activity>
+        <activity android:name="com.android.quiz.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name="com.android.quiz.MainActivity"></activity>
 
         <meta-data
             android:name="preloaded_fonts"
