--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.example.quizme"
+        applicationId "com.android.quiz"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
